Update rest/src/main/groovy/whelk/rest/api/Crud.java
Co-authored-by: Olov Ylinenpää <51744858+olovy@users.noreply.github.com>